v/0.6.0/_sources/examples/09_stormcast_example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/09_stormcast_example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_09_stormcast_example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_09_stormcast_example.py:


Running StormCast Inference
===========================

Basic StormCast inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using StormCast. For details about the stormcast model,
see

 - https://arxiv.org/abs/2408.10958

.. GENERATED FROM PYTHON SOURCE LINES 33-38

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 40-44

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 46-55

Thus, we need the following:

- Prognostic Model: Use the built in StormCast Model :py:class:`earth2studio.models.px.StormCast`.
- Datasource: Pull data from the HRRR data api :py:class:`earth2studio.data.HRRR`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

StormCast also requires a conditioning data source. We use a forecast data source here,
GFS_FX :py:class:`earth2studio.data.GFS_FX`, but a non-forecast data source such as ARCO
could also be used with appropriate time stamps.

.. GENERATED FROM PYTHON SOURCE LINES 57-90

.. code-block:: Python

    from datetime import datetime, timedelta

    from loguru import logger
    from tqdm import tqdm

    logger.remove()
    logger.add(lambda msg: tqdm.write(msg, end=""), colorize=True)

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import GFS_FX, HRRR
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import StormCast

    # Load the default model package which downloads the check point from NGC
    package = StormCast.load_default_package()
    model = StormCast.load_model(package)

    # Create the data source
    data = HRRR()

    # Create and set the conditioning data source
    conditioning_data_source = GFS_FX()
    model.conditioning_data_source = conditioning_data_source

    # Create the IO handler, store in memory
    io = ZarrBackend()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading model.yaml: 0%|          | 0.00/2.53k [00:00<?, ?B/s]    Downloading model.yaml: 100%|██████████| 2.53k/2.53k [00:00<00:00, 2.00MB/s]
    Downloading StormCastUNet.0.0.mdlus: 0%|          | 0.00/300M [00:00<?, ?B/s]    Downloading StormCastUNet.0.0.mdlus: 8%|▊         | 24.8M/300M [00:00<00:01, 259MB/s]    Downloading StormCastUNet.0.0.mdlus: 24%|██▎       | 71.2M/300M [00:00<00:00, 393MB/s]    Downloading StormCastUNet.0.0.mdlus: 39%|███▉      | 118M/300M [00:00<00:00, 436MB/s]     Downloading StormCastUNet.0.0.mdlus: 55%|█████▍    | 165M/300M [00:00<00:00, 457MB/s]    Downloading StormCastUNet.0.0.mdlus: 69%|██████▉   | 208M/300M [00:00<00:00, 457MB/s]    Downloading StormCastUNet.0.0.mdlus: 85%|████████▍ | 255M/300M [00:00<00:00, 467MB/s]    Downloading StormCastUNet.0.0.mdlus: 100%|█████████▉| 299M/300M [00:00<00:00, 465MB/s]    Downloading StormCastUNet.0.0.mdlus: 100%|██████████| 300M/300M [00:00<00:00, 446MB/s]
    Downloading EDMPrecond.0.0.mdlus: 0%|          | 0.00/462M [00:00<?, ?B/s]    Downloading EDMPrecond.0.0.mdlus: 6%|▌         | 27.8M/462M [00:00<00:01, 290MB/s]    Downloading EDMPrecond.0.0.mdlus: 15%|█▌        | 71.3M/462M [00:00<00:01, 387MB/s]    Downloading EDMPrecond.0.0.mdlus: 24%|██▍       | 111M/462M [00:00<00:00, 397MB/s]     Downloading EDMPrecond.0.0.mdlus: 32%|███▏      | 150M/462M [00:00<00:00, 404MB/s]    Downloading EDMPrecond.0.0.mdlus: 42%|████▏     | 193M/462M [00:00<00:00, 421MB/s]    Downloading EDMPrecond.0.0.mdlus: 52%|█████▏    | 239M/462M [00:00<00:00, 442MB/s]    Downloading EDMPrecond.0.0.mdlus: 61%|██████    | 282M/462M [00:00<00:00, 443MB/s]    Downloading EDMPrecond.0.0.mdlus: 70%|███████   | 324M/462M [00:00<00:00, 431MB/s]    Downloading EDMPrecond.0.0.mdlus: 79%|███████▉  | 365M/462M [00:00<00:00, 431MB/s]    Downloading EDMPrecond.0.0.mdlus: 88%|████████▊ | 407M/462M [00:01<00:00, 433MB/s]    Downloading EDMPrecond.0.0.mdlus: 97%|█████████▋| 448M/462M [00:01<00:00, 423MB/s]    Downloading EDMPrecond.0.0.mdlus: 100%|██████████| 462M/462M [00:01<00:00, 420MB/s]
    Downloading metadata.zarr.zip: 0%|          | 0.00/1.95M [00:00<?, ?B/s]    Downloading metadata.zarr.zip: 100%|██████████| 1.95M/1.95M [00:00<00:00, 158MB/s]
     ╭─▌▌Herbie─────────────────────────────────────────────╮
     │ INFO: Created a default config file.                 │
     │ You may view/edit Herbie's configuration here:       │
     │          /root/.config/herbie/config.toml            │
     ╰──────────────────────────────────────────────────────╯





.. GENERATED FROM PYTHON SOURCE LINES 91-99

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 4 hours

.. GENERATED FROM PYTHON SOURCE LINES 101-110

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 4
    today = datetime.today() - timedelta(days=1)
    date = today.isoformat().split("T")[0]
    io = run.deterministic([date], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-04-15 06:44:11.480 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2025-04-15 06:44:11.480 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]👨🏻‍🏭 Created directory: [/builds/modulus/earth-2/earth2studio/.earth2studio-cache/hrrr/hrrr/20250414]
    Fetching HRRR data:   1%|          | 1/99 [00:02<03:28,  2.13s/it]    Fetching HRRR data:   2%|▏         | 2/99 [00:05<04:15,  2.64s/it]    Fetching HRRR data:   3%|▎         | 3/99 [00:06<03:22,  2.10s/it]    Fetching HRRR data:   4%|▍         | 4/99 [00:08<02:55,  1.85s/it]    Fetching HRRR data:   5%|▌         | 5/99 [00:09<02:52,  1.83s/it]    Fetching HRRR data:   6%|▌         | 6/99 [00:12<03:03,  1.97s/it]    Fetching HRRR data:   7%|▋         | 7/99 [00:13<02:51,  1.86s/it]    Fetching HRRR data:   8%|▊         | 8/99 [00:15<02:45,  1.82s/it]    Fetching HRRR data:   9%|▉         | 9/99 [00:17<02:55,  1.95s/it]    Fetching HRRR data:  10%|█         | 10/99 [00:19<02:42,  1.83s/it]    Fetching HRRR data:  11%|█         | 11/99 [00:20<02:35,  1.77s/it]    Fetching HRRR data:  12%|█▏        | 12/99 [00:22<02:41,  1.85s/it]    Fetching HRRR data:  13%|█▎        | 13/99 [00:24<02:31,  1.76s/it]    Fetching HRRR data:  14%|█▍        | 14/99 [00:26<02:26,  1.73s/it]    Fetching HRRR data:  15%|█▌        | 15/99 [00:27<02:21,  1.68s/it]    Fetching HRRR data:  16%|█▌        | 16/99 [00:29<02:17,  1.65s/it]    Fetching HRRR data:  17%|█▋        | 17/99 [00:30<02:12,  1.62s/it]    Fetching HRRR data:  18%|█▊        | 18/99 [00:32<02:11,  1.62s/it]    Fetching HRRR data:  19%|█▉        | 19/99 [00:34<02:08,  1.61s/it]    Fetching HRRR data:  20%|██        | 20/99 [00:35<02:05,  1.59s/it]    Fetching HRRR data:  21%|██        | 21/99 [00:37<02:02,  1.57s/it]    Fetching HRRR data:  22%|██▏       | 22/99 [00:38<01:59,  1.55s/it]    Fetching HRRR data:  23%|██▎       | 23/99 [00:40<01:57,  1.55s/it]    Fetching HRRR data:  24%|██▍       | 24/99 [00:41<01:54,  1.52s/it]    Fetching HRRR data:  25%|██▌       | 25/99 [00:43<01:53,  1.53s/it]    Fetching HRRR data:  26%|██▋       | 26/99 [00:44<01:51,  1.53s/it]    Fetching HRRR data:  27%|██▋       | 27/99 [00:46<01:49,  1.53s/it]    Fetching HRRR data:  28%|██▊       | 28/99 [00:47<01:47,  1.51s/it]    Fetching HRRR data:  29%|██▉       | 29/99 [00:49<01:45,  1.50s/it]    Fetching HRRR data:  30%|███       | 30/99 [00:50<01:42,  1.49s/it]    Fetching HRRR data:  31%|███▏      | 31/99 [00:52<01:41,  1.49s/it]    Fetching HRRR data:  32%|███▏      | 32/99 [00:53<01:40,  1.50s/it]    Fetching HRRR data:  33%|███▎      | 33/99 [00:55<01:38,  1.50s/it]    Fetching HRRR data:  34%|███▍      | 34/99 [00:56<01:36,  1.49s/it]    Fetching HRRR data:  35%|███▌      | 35/99 [00:58<01:34,  1.48s/it]    Fetching HRRR data:  36%|███▋      | 36/99 [00:59<01:40,  1.59s/it]    Fetching HRRR data:  37%|███▋      | 37/99 [01:01<01:38,  1.59s/it]    Fetching HRRR data:  38%|███▊      | 38/99 [01:03<01:37,  1.59s/it]    Fetching HRRR data:  39%|███▉      | 39/99 [01:04<01:35,  1.60s/it]    Fetching HRRR data:  40%|████      | 40/99 [01:06<01:35,  1.62s/it]    Fetching HRRR data:  41%|████▏     | 41/99 [01:08<01:39,  1.71s/it]    Fetching HRRR data:  42%|████▏     | 42/99 [01:09<01:35,  1.68s/it]    Fetching HRRR data:  43%|████▎     | 43/99 [01:11<01:32,  1.65s/it]    Fetching HRRR data:  44%|████▍     | 44/99 [01:13<01:30,  1.64s/it]    Fetching HRRR data:  45%|████▌     | 45/99 [01:14<01:27,  1.63s/it]    Fetching HRRR data:  46%|████▋     | 46/99 [01:16<01:33,  1.76s/it]    Fetching HRRR data:  47%|████▋     | 47/99 [01:18<01:27,  1.69s/it]    Fetching HRRR data:  48%|████▊     | 48/99 [01:19<01:24,  1.66s/it]    Fetching HRRR data:  49%|████▉     | 49/99 [01:21<01:22,  1.64s/it]    Fetching HRRR data:  51%|█████     | 50/99 [01:23<01:20,  1.64s/it]    Fetching HRRR data:  52%|█████▏    | 51/99 [01:24<01:17,  1.61s/it]    Fetching HRRR data:  53%|█████▎    | 52/99 [01:26<01:14,  1.58s/it]    Fetching HRRR data:  54%|█████▎    | 53/99 [01:27<01:11,  1.56s/it]    Fetching HRRR data:  55%|█████▍    | 54/99 [01:30<01:23,  1.86s/it]    Fetching HRRR data:  56%|█████▌    | 55/99 [01:31<01:17,  1.75s/it]    Fetching HRRR data:  57%|█████▋    | 56/99 [01:33<01:12,  1.69s/it]    Fetching HRRR data:  58%|█████▊    | 57/99 [01:34<01:09,  1.65s/it]    Fetching HRRR data:  59%|█████▊    | 58/99 [01:36<01:06,  1.62s/it]    Fetching HRRR data:  60%|█████▉    | 59/99 [01:37<01:03,  1.60s/it]    Fetching HRRR data:  61%|██████    | 60/99 [01:39<01:01,  1.58s/it]    Fetching HRRR data:  62%|██████▏   | 61/99 [01:41<01:00,  1.58s/it]    Fetching HRRR data:  63%|██████▎   | 62/99 [01:42<00:57,  1.55s/it]    Fetching HRRR data:  64%|██████▎   | 63/99 [01:44<00:56,  1.58s/it]    Fetching HRRR data:  65%|██████▍   | 64/99 [01:45<00:55,  1.57s/it]    Fetching HRRR data:  66%|██████▌   | 65/99 [01:47<00:53,  1.57s/it]    Fetching HRRR data:  67%|██████▋   | 66/99 [01:48<00:51,  1.57s/it]    Fetching HRRR data:  68%|██████▊   | 67/99 [01:50<00:49,  1.55s/it]    Fetching HRRR data:  69%|██████▊   | 68/99 [01:51<00:48,  1.55s/it]    Fetching HRRR data:  70%|██████▉   | 69/99 [01:53<00:47,  1.57s/it]    Fetching HRRR data:  71%|███████   | 70/99 [01:55<00:45,  1.58s/it]    Fetching HRRR data:  72%|███████▏  | 71/99 [01:56<00:44,  1.59s/it]    Fetching HRRR data:  73%|███████▎  | 72/99 [01:58<00:43,  1.61s/it]    Fetching HRRR data:  74%|███████▎  | 73/99 [02:01<00:54,  2.09s/it]    Fetching HRRR data:  75%|███████▍  | 74/99 [02:03<00:48,  1.96s/it]    Fetching HRRR data:  76%|███████▌  | 75/99 [02:05<00:45,  1.89s/it]    Fetching HRRR data:  77%|███████▋  | 76/99 [02:06<00:42,  1.84s/it]    Fetching HRRR data:  78%|███████▊  | 77/99 [02:10<00:50,  2.28s/it]    Fetching HRRR data:  79%|███████▉  | 78/99 [02:11<00:43,  2.08s/it]    Fetching HRRR data:  80%|███████▉  | 79/99 [02:13<00:39,  1.97s/it]    Fetching HRRR data:  81%|████████  | 80/99 [02:15<00:35,  1.88s/it]    Fetching HRRR data:  82%|████████▏ | 81/99 [02:16<00:32,  1.80s/it]    Fetching HRRR data:  83%|████████▎ | 82/99 [02:18<00:29,  1.74s/it]    Fetching HRRR data:  84%|████████▍ | 83/99 [02:19<00:27,  1.71s/it]    Fetching HRRR data:  85%|████████▍ | 84/99 [02:21<00:24,  1.67s/it]    Fetching HRRR data:  86%|████████▌ | 85/99 [02:23<00:23,  1.67s/it]    Fetching HRRR data:  87%|████████▋ | 86/99 [02:26<00:27,  2.08s/it]    Fetching HRRR data:  88%|████████▊ | 87/99 [02:27<00:24,  2.00s/it]    Fetching HRRR data:  89%|████████▉ | 88/99 [02:29<00:20,  1.90s/it]    Fetching HRRR data:  90%|████████▉ | 89/99 [02:31<00:18,  1.85s/it]    Fetching HRRR data:  91%|█████████ | 90/99 [02:32<00:15,  1.78s/it]    Fetching HRRR data:  92%|█████████▏| 91/99 [02:34<00:13,  1.73s/it]    Fetching HRRR data:  93%|█████████▎| 92/99 [02:36<00:11,  1.70s/it]    Fetching HRRR data:  94%|█████████▍| 93/99 [02:37<00:10,  1.72s/it]    Fetching HRRR data:  95%|█████████▍| 94/99 [02:39<00:08,  1.69s/it]    Fetching HRRR data:  96%|█████████▌| 95/99 [02:41<00:06,  1.67s/it]    Fetching HRRR data:  97%|█████████▋| 96/99 [02:42<00:04,  1.65s/it]    Fetching HRRR data:  98%|█████████▊| 97/99 [02:44<00:03,  1.66s/it]    Fetching HRRR data:  99%|█████████▉| 98/99 [02:46<00:01,  1.65s/it]    Fetching HRRR data: 100%|██████████| 99/99 [02:47<00:00,  1.58s/it]    Fetching HRRR data: 100%|██████████| 99/99 [02:47<00:00,  1.69s/it]
    2025-04-15 06:47:40.587 | SUCCESS  | earth2studio.run:deterministic:106 - Fetched data from HRRR
    2025-04-15 06:47:40.589 | WARNING  | earth2studio.io.zarr:add_array:192 - Datetime64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-04-15 06:47:40.595 | WARNING  | earth2studio.io.zarr:add_array:198 - Timedelta64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-04-15 06:47:41.012 | INFO     | earth2studio.run:deterministic:136 - Inference starting!
    Running inference:   0%|          | 0/5 [00:00<?, ?it/s]    Running inference:  20%|██        | 1/5 [00:08<00:34,  8.54s/it]                                                                    2025-04-15 06:47:49.559 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:213 - Fetching GFS index file: 2025-04-14 00:00:00 lead 0:00:00
    Running inference:  20%|██        | 1/5 [00:08<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-04-15 06:47:49.977 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u10m at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  20%|██        | 1/5 [00:08<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:01<00:49,  1.99s/it]
                                                                                                                                                            2025-04-15 06:47:51.970 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v10m at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:01<00:49,  1.99s/it]    Running inference:  20%|██        | 1/5 [00:10<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:41,  1.74s/it]
                                                                                                                                                            2025-04-15 06:47:53.525 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t2m at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:41,  1.74s/it]    Running inference:  20%|██        | 1/5 [00:12<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:05<00:38,  1.66s/it]
                                                                                                                                                            2025-04-15 06:47:55.087 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: tcwv at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:05<00:38,  1.66s/it]    Running inference:  20%|██        | 1/5 [00:14<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:35,  1.59s/it]
                                                                                                                                                            2025-04-15 06:47:56.581 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: msl at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:35,  1.59s/it]    Running inference:  20%|██        | 1/5 [00:15<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:08<00:32,  1.57s/it]
                                                                                                                                                            2025-04-15 06:47:58.115 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: sp at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:08<00:32,  1.57s/it]    Running inference:  20%|██        | 1/5 [00:17<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:31,  1.56s/it]
                                                                                                                                                            2025-04-15 06:47:59.656 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u1000 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:31,  1.56s/it]    Running inference:  20%|██        | 1/5 [00:18<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:11<00:29,  1.57s/it]
                                                                                                                                                            2025-04-15 06:48:01.247 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u850 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:11<00:29,  1.57s/it]    Running inference:  20%|██        | 1/5 [00:20<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:28,  1.57s/it]
                                                                                                                                                            2025-04-15 06:48:02.803 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u500 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:28,  1.57s/it]    Running inference:  20%|██        | 1/5 [00:21<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:14<00:26,  1.56s/it]
                                                                                                                                                            2025-04-15 06:48:04.346 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u250 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:14<00:26,  1.56s/it]    Running inference:  20%|██        | 1/5 [00:23<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:25,  1.57s/it]
                                                                                                                                                             2025-04-15 06:48:05.957 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v1000 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:25,  1.57s/it]    Running inference:  20%|██        | 1/5 [00:24<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:17<00:23,  1.55s/it]
                                                                                                                                                             2025-04-15 06:48:07.459 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v850 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:17<00:23,  1.55s/it]    Running inference:  20%|██        | 1/5 [00:26<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:19<00:21,  1.56s/it]
                                                                                                                                                             2025-04-15 06:48:09.031 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v500 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:19<00:21,  1.56s/it]    Running inference:  20%|██        | 1/5 [00:28<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:20<00:19,  1.53s/it]
                                                                                                                                                             2025-04-15 06:48:10.498 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v250 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:20<00:19,  1.53s/it]    Running inference:  20%|██        | 1/5 [00:29<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:21<00:18,  1.51s/it]
                                                                                                                                                             2025-04-15 06:48:11.953 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z1000 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:21<00:18,  1.51s/it]    Running inference:  20%|██        | 1/5 [00:30<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:23<00:16,  1.50s/it]
                                                                                                                                                             2025-04-15 06:48:13.447 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z850 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:23<00:16,  1.50s/it]    Running inference:  20%|██        | 1/5 [00:32<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:25<00:15,  1.54s/it]
                                                                                                                                                             2025-04-15 06:48:15.058 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z500 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:25<00:15,  1.54s/it]    Running inference:  20%|██        | 1/5 [00:34<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:26<00:13,  1.51s/it]
                                                                                                                                                             2025-04-15 06:48:16.515 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z250 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:26<00:13,  1.51s/it]    Running inference:  20%|██        | 1/5 [00:35<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:28<00:12,  1.52s/it]
                                                                                                                                                             2025-04-15 06:48:18.043 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t1000 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:28<00:12,  1.52s/it]    Running inference:  20%|██        | 1/5 [00:37<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:29<00:10,  1.50s/it]
                                                                                                                                                             2025-04-15 06:48:19.498 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t850 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:29<00:10,  1.50s/it]    Running inference:  20%|██        | 1/5 [00:38<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:31<00:08,  1.49s/it]
                                                                                                                                                             2025-04-15 06:48:20.981 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t500 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:31<00:08,  1.49s/it]    Running inference:  20%|██        | 1/5 [00:39<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:32<00:07,  1.48s/it]
                                                                                                                                                             2025-04-15 06:48:22.433 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t250 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:32<00:07,  1.48s/it]    Running inference:  20%|██        | 1/5 [00:41<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:33<00:05,  1.48s/it]
                                                                                                                                                             2025-04-15 06:48:23.906 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q1000 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:33<00:05,  1.48s/it]    Running inference:  20%|██        | 1/5 [00:42<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:35<00:04,  1.48s/it]
                                                                                                                                                             2025-04-15 06:48:25.403 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q850 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:35<00:04,  1.48s/it]    Running inference:  20%|██        | 1/5 [00:44<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:36<00:02,  1.48s/it]
                                                                                                                                                             2025-04-15 06:48:26.882 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q500 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:36<00:02,  1.48s/it]    Running inference:  20%|██        | 1/5 [00:45<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:38<00:01,  1.50s/it]
                                                                                                                                                             2025-04-15 06:48:28.425 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q250 at 2025-04-14 00:00:00_0:00:00

    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:38<00:01,  1.50s/it]    Running inference:  20%|██        | 1/5 [00:47<00:34,  8.54s/it]
    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:39<00:00,  1.51s/it]    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:39<00:00,  1.54s/it]
    Running inference:  40%|████      | 2/5 [01:08<01:57, 39.05s/it]                                                                    2025-04-15 06:48:49.971 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:213 - Fetching GFS index file: 2025-04-14 00:00:00 lead 1:00:00
    Running inference:  40%|████      | 2/5 [01:08<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-04-15 06:48:50.424 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u10m at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  40%|████      | 2/5 [01:09<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:02<00:51,  2.06s/it]
                                                                                                                                                            2025-04-15 06:48:52.485 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v10m at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:02<00:51,  2.06s/it]    Running inference:  40%|████      | 2/5 [01:11<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:40,  1.70s/it]
                                                                                                                                                            2025-04-15 06:48:53.937 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t2m at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:40,  1.70s/it]    Running inference:  40%|████      | 2/5 [01:12<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:05<00:37,  1.62s/it]
                                                                                                                                                            2025-04-15 06:48:55.453 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: tcwv at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:05<00:37,  1.62s/it]    Running inference:  40%|████      | 2/5 [01:14<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:34,  1.55s/it]
                                                                                                                                                            2025-04-15 06:48:56.911 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: msl at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:34,  1.55s/it]    Running inference:  40%|████      | 2/5 [01:15<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:08<00:32,  1.56s/it]
                                                                                                                                                            2025-04-15 06:48:58.480 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: sp at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:08<00:32,  1.56s/it]    Running inference:  40%|████      | 2/5 [01:17<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:30,  1.55s/it]
                                                                                                                                                            2025-04-15 06:48:59.999 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u1000 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:30,  1.55s/it]    Running inference:  40%|████      | 2/5 [01:18<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:11<00:29,  1.55s/it]
                                                                                                                                                            2025-04-15 06:49:01.559 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u850 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:11<00:29,  1.55s/it]    Running inference:  40%|████      | 2/5 [01:20<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:27,  1.54s/it]
                                                                                                                                                            2025-04-15 06:49:03.067 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u500 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:27,  1.54s/it]    Running inference:  40%|████      | 2/5 [01:22<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:14<00:26,  1.55s/it]
                                                                                                                                                            2025-04-15 06:49:04.631 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u250 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:14<00:26,  1.55s/it]    Running inference:  40%|████      | 2/5 [01:23<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:24,  1.54s/it]
                                                                                                                                                             2025-04-15 06:49:06.161 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v1000 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:24,  1.54s/it]    Running inference:  40%|████      | 2/5 [01:25<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:17<00:22,  1.51s/it]
                                                                                                                                                             2025-04-15 06:49:07.601 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v850 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:17<00:22,  1.51s/it]    Running inference:  40%|████      | 2/5 [01:26<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:18<00:20,  1.49s/it]
                                                                                                                                                             2025-04-15 06:49:09.053 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v500 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:18<00:20,  1.49s/it]    Running inference:  40%|████      | 2/5 [01:28<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:20<00:19,  1.48s/it]
                                                                                                                                                             2025-04-15 06:49:10.498 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v250 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:20<00:19,  1.48s/it]    Running inference:  40%|████      | 2/5 [01:29<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:21<00:17,  1.47s/it]
                                                                                                                                                             2025-04-15 06:49:11.941 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z1000 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:21<00:17,  1.47s/it]    Running inference:  40%|████      | 2/5 [01:30<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:22<00:16,  1.47s/it]
                                                                                                                                                             2025-04-15 06:49:13.401 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z850 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:22<00:16,  1.47s/it]    Running inference:  40%|████      | 2/5 [01:32<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:24<00:14,  1.49s/it]
                                                                                                                                                             2025-04-15 06:49:14.965 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z500 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:24<00:14,  1.49s/it]    Running inference:  40%|████      | 2/5 [01:33<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:26<00:13,  1.49s/it]
                                                                                                                                                             2025-04-15 06:49:16.427 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z250 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:26<00:13,  1.49s/it]    Running inference:  40%|████      | 2/5 [01:35<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:27<00:11,  1.50s/it]
                                                                                                                                                             2025-04-15 06:49:17.946 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t1000 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:27<00:11,  1.50s/it]    Running inference:  40%|████      | 2/5 [01:36<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:28<00:10,  1.48s/it]
                                                                                                                                                             2025-04-15 06:49:19.394 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t850 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:28<00:10,  1.48s/it]    Running inference:  40%|████      | 2/5 [01:38<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:30<00:08,  1.49s/it]
                                                                                                                                                             2025-04-15 06:49:20.914 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t500 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:30<00:08,  1.49s/it]    Running inference:  40%|████      | 2/5 [01:39<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:31<00:07,  1.46s/it]
                                                                                                                                                             2025-04-15 06:49:22.288 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t250 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:31<00:07,  1.46s/it]    Running inference:  40%|████      | 2/5 [01:41<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:33<00:05,  1.47s/it]
                                                                                                                                                             2025-04-15 06:49:23.791 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q1000 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:33<00:05,  1.47s/it]    Running inference:  40%|████      | 2/5 [01:42<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:34<00:04,  1.48s/it]
                                                                                                                                                             2025-04-15 06:49:25.296 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q850 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:34<00:04,  1.48s/it]    Running inference:  40%|████      | 2/5 [01:44<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:36<00:02,  1.49s/it]
                                                                                                                                                             2025-04-15 06:49:26.804 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q500 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:36<00:02,  1.49s/it]    Running inference:  40%|████      | 2/5 [01:45<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:37<00:01,  1.48s/it]
                                                                                                                                                             2025-04-15 06:49:28.267 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q250 at 2025-04-14 00:00:00_1:00:00

    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:37<00:01,  1.48s/it]    Running inference:  40%|████      | 2/5 [01:47<01:57, 39.05s/it]
    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:39<00:00,  1.48s/it]    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:39<00:00,  1.51s/it]
    Running inference:  60%|██████    | 3/5 [02:09<01:37, 48.91s/it]                                                                    2025-04-15 06:49:50.599 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:213 - Fetching GFS index file: 2025-04-14 00:00:00 lead 2:00:00
    Running inference:  60%|██████    | 3/5 [02:09<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-04-15 06:49:51.031 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u10m at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  60%|██████    | 3/5 [02:10<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:02<00:50,  2.02s/it]
                                                                                                                                                            2025-04-15 06:49:53.055 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v10m at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:02<00:50,  2.02s/it]    Running inference:  60%|██████    | 3/5 [02:12<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:40,  1.70s/it]
                                                                                                                                                            2025-04-15 06:49:54.522 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t2m at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:40,  1.70s/it]    Running inference:  60%|██████    | 3/5 [02:13<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:05<00:37,  1.61s/it]
                                                                                                                                                            2025-04-15 06:49:56.033 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: tcwv at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:05<00:37,  1.61s/it]    Running inference:  60%|██████    | 3/5 [02:15<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:33,  1.54s/it]
                                                                                                                                                            2025-04-15 06:49:57.465 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: msl at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:33,  1.54s/it]    Running inference:  60%|██████    | 3/5 [02:16<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:07<00:31,  1.52s/it]
                                                                                                                                                            2025-04-15 06:49:58.936 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: sp at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:07<00:31,  1.52s/it]    Running inference:  60%|██████    | 3/5 [02:17<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:30,  1.51s/it]
                                                                                                                                                            2025-04-15 06:50:00.424 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u1000 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:30,  1.51s/it]    Running inference:  60%|██████    | 3/5 [02:19<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:10<00:28,  1.52s/it]
                                                                                                                                                            2025-04-15 06:50:01.987 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u850 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:10<00:28,  1.52s/it]    Running inference:  60%|██████    | 3/5 [02:20<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:27,  1.54s/it]
                                                                                                                                                            2025-04-15 06:50:03.559 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u500 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:27,  1.54s/it]    Running inference:  60%|██████    | 3/5 [02:22<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:14<00:25,  1.52s/it]
                                                                                                                                                            2025-04-15 06:50:05.051 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u250 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:14<00:25,  1.52s/it]    Running inference:  60%|██████    | 3/5 [02:24<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:24,  1.55s/it]
                                                                                                                                                             2025-04-15 06:50:06.662 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v1000 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:24,  1.55s/it]    Running inference:  60%|██████    | 3/5 [02:25<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:17<00:22,  1.51s/it]
                                                                                                                                                             2025-04-15 06:50:08.075 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v850 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:17<00:22,  1.51s/it]    Running inference:  60%|██████    | 3/5 [02:27<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:18<00:20,  1.48s/it]
                                                                                                                                                             2025-04-15 06:50:09.503 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v500 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:18<00:20,  1.48s/it]    Running inference:  60%|██████    | 3/5 [02:28<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:19<00:19,  1.47s/it]
                                                                                                                                                             2025-04-15 06:50:10.927 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v250 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:19<00:19,  1.47s/it]    Running inference:  60%|██████    | 3/5 [02:29<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:21<00:17,  1.47s/it]
                                                                                                                                                             2025-04-15 06:50:12.404 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z1000 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:21<00:17,  1.47s/it]    Running inference:  60%|██████    | 3/5 [02:31<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:22<00:16,  1.47s/it]
                                                                                                                                                             2025-04-15 06:50:13.878 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z850 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:22<00:16,  1.47s/it]    Running inference:  60%|██████    | 3/5 [02:32<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:24<00:14,  1.46s/it]
                                                                                                                                                             2025-04-15 06:50:15.328 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z500 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:24<00:14,  1.46s/it]    Running inference:  60%|██████    | 3/5 [02:34<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:25<00:13,  1.45s/it]
                                                                                                                                                             2025-04-15 06:50:16.749 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z250 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:25<00:13,  1.45s/it]    Running inference:  60%|██████    | 3/5 [02:35<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:27<00:11,  1.45s/it]
                                                                                                                                                             2025-04-15 06:50:18.211 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t1000 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:27<00:11,  1.45s/it]    Running inference:  60%|██████    | 3/5 [02:37<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:28<00:10,  1.44s/it]
                                                                                                                                                             2025-04-15 06:50:19.632 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t850 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:28<00:10,  1.44s/it]    Running inference:  60%|██████    | 3/5 [02:38<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:30<00:08,  1.44s/it]
                                                                                                                                                             2025-04-15 06:50:21.059 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t500 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:30<00:08,  1.44s/it]    Running inference:  60%|██████    | 3/5 [02:40<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:31<00:07,  1.43s/it]
                                                                                                                                                             2025-04-15 06:50:22.478 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t250 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:31<00:07,  1.43s/it]    Running inference:  60%|██████    | 3/5 [02:41<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:32<00:05,  1.45s/it]
                                                                                                                                                             2025-04-15 06:50:23.982 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q1000 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:32<00:05,  1.45s/it]    Running inference:  60%|██████    | 3/5 [02:42<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:34<00:04,  1.44s/it]
                                                                                                                                                             2025-04-15 06:50:25.394 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q850 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:34<00:04,  1.44s/it]    Running inference:  60%|██████    | 3/5 [02:44<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:35<00:02,  1.44s/it]
                                                                                                                                                             2025-04-15 06:50:26.830 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q500 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:35<00:02,  1.44s/it]    Running inference:  60%|██████    | 3/5 [02:45<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:37<00:01,  1.43s/it]
                                                                                                                                                             2025-04-15 06:50:28.244 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q250 at 2025-04-14 00:00:00_2:00:00

    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:37<00:01,  1.43s/it]    Running inference:  60%|██████    | 3/5 [02:47<01:37, 48.91s/it]
    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:38<00:00,  1.43s/it]    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:38<00:00,  1.49s/it]
    Running inference:  80%|████████  | 4/5 [03:10<00:53, 53.49s/it]                                                                    2025-04-15 06:50:51.123 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:213 - Fetching GFS index file: 2025-04-14 00:00:00 lead 3:00:00
    Running inference:  80%|████████  | 4/5 [03:10<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]
                                                                                                                                                    2025-04-15 06:50:51.535 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u10m at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Running inference:  80%|████████  | 4/5 [03:10<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:01<00:47,  1.91s/it]
                                                                                                                                                            2025-04-15 06:50:53.447 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v10m at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:   4%|▍         | 1/26 [00:01<00:47,  1.91s/it]    Running inference:  80%|████████  | 4/5 [03:12<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:39,  1.65s/it]
                                                                                                                                                            2025-04-15 06:50:54.913 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t2m at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:   8%|▊         | 2/26 [00:03<00:39,  1.65s/it]    Running inference:  80%|████████  | 4/5 [03:13<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:04<00:36,  1.58s/it]
                                                                                                                                                            2025-04-15 06:50:56.399 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: tcwv at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  12%|█▏        | 3/26 [00:04<00:36,  1.58s/it]    Running inference:  80%|████████  | 4/5 [03:15<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:33,  1.51s/it]
                                                                                                                                                            2025-04-15 06:50:57.816 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: msl at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  15%|█▌        | 4/26 [00:06<00:33,  1.51s/it]    Running inference:  80%|████████  | 4/5 [03:16<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:07<00:31,  1.50s/it]
                                                                                                                                                            2025-04-15 06:50:59.297 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: sp at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  19%|█▉        | 5/26 [00:07<00:31,  1.50s/it]    Running inference:  80%|████████  | 4/5 [03:18<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:29,  1.47s/it]
                                                                                                                                                            2025-04-15 06:51:00.717 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u1000 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  23%|██▎       | 6/26 [00:09<00:29,  1.47s/it]    Running inference:  80%|████████  | 4/5 [03:19<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:10<00:28,  1.50s/it]
                                                                                                                                                            2025-04-15 06:51:02.264 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u850 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  27%|██▋       | 7/26 [00:10<00:28,  1.50s/it]    Running inference:  80%|████████  | 4/5 [03:21<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:27,  1.52s/it]
                                                                                                                                                            2025-04-15 06:51:03.827 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u500 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  31%|███       | 8/26 [00:12<00:27,  1.52s/it]    Running inference:  80%|████████  | 4/5 [03:22<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:13<00:25,  1.50s/it]
                                                                                                                                                            2025-04-15 06:51:05.299 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u250 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  35%|███▍      | 9/26 [00:13<00:25,  1.50s/it]    Running inference:  80%|████████  | 4/5 [03:24<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:24,  1.51s/it]
                                                                                                                                                             2025-04-15 06:51:06.825 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v1000 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  38%|███▊      | 10/26 [00:15<00:24,  1.51s/it]    Running inference:  80%|████████  | 4/5 [03:25<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:16<00:22,  1.48s/it]
                                                                                                                                                             2025-04-15 06:51:08.230 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v850 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  42%|████▏     | 11/26 [00:16<00:22,  1.48s/it]    Running inference:  80%|████████  | 4/5 [03:27<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:18<00:20,  1.48s/it]
                                                                                                                                                             2025-04-15 06:51:09.703 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v500 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  46%|████▌     | 12/26 [00:18<00:20,  1.48s/it]    Running inference:  80%|████████  | 4/5 [03:28<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:19<00:18,  1.46s/it]
                                                                                                                                                             2025-04-15 06:51:11.108 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v250 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  50%|█████     | 13/26 [00:19<00:18,  1.46s/it]    Running inference:  80%|████████  | 4/5 [03:30<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:20<00:17,  1.44s/it]
                                                                                                                                                             2025-04-15 06:51:12.509 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z1000 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  54%|█████▍    | 14/26 [00:20<00:17,  1.44s/it]    Running inference:  80%|████████  | 4/5 [03:31<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:22<00:15,  1.43s/it]
                                                                                                                                                             2025-04-15 06:51:13.920 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z850 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  58%|█████▊    | 15/26 [00:22<00:15,  1.43s/it]    Running inference:  80%|████████  | 4/5 [03:32<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:23<00:14,  1.44s/it]
                                                                                                                                                             2025-04-15 06:51:15.394 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z500 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  62%|██████▏   | 16/26 [00:23<00:14,  1.44s/it]    Running inference:  80%|████████  | 4/5 [03:34<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:25<00:12,  1.43s/it]
                                                                                                                                                             2025-04-15 06:51:16.787 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z250 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  65%|██████▌   | 17/26 [00:25<00:12,  1.43s/it]    Running inference:  80%|████████  | 4/5 [03:35<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:26<00:11,  1.44s/it]
                                                                                                                                                             2025-04-15 06:51:18.246 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t1000 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  69%|██████▉   | 18/26 [00:26<00:11,  1.44s/it]    Running inference:  80%|████████  | 4/5 [03:37<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:28<00:10,  1.43s/it]
                                                                                                                                                             2025-04-15 06:51:19.655 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t850 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  73%|███████▎  | 19/26 [00:28<00:10,  1.43s/it]    Running inference:  80%|████████  | 4/5 [03:38<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:29<00:08,  1.44s/it]
                                                                                                                                                             2025-04-15 06:51:21.118 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t500 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  77%|███████▋  | 20/26 [00:29<00:08,  1.44s/it]    Running inference:  80%|████████  | 4/5 [03:40<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:30<00:07,  1.43s/it]
                                                                                                                                                             2025-04-15 06:51:22.522 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t250 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  81%|████████  | 21/26 [00:30<00:07,  1.43s/it]    Running inference:  80%|████████  | 4/5 [03:41<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:32<00:05,  1.42s/it]
                                                                                                                                                             2025-04-15 06:51:23.930 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q1000 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  85%|████████▍ | 22/26 [00:32<00:05,  1.42s/it]    Running inference:  80%|████████  | 4/5 [03:42<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:33<00:04,  1.42s/it]
                                                                                                                                                             2025-04-15 06:51:25.343 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q850 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  88%|████████▊ | 23/26 [00:33<00:04,  1.42s/it]    Running inference:  80%|████████  | 4/5 [03:44<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:35<00:02,  1.44s/it]
                                                                                                                                                             2025-04-15 06:51:26.823 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q500 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  92%|█████████▏| 24/26 [00:35<00:02,  1.44s/it]    Running inference:  80%|████████  | 4/5 [03:45<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:36<00:01,  1.43s/it]
                                                                                                                                                             2025-04-15 06:51:28.228 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: q250 at 2025-04-14 00:00:00_3:00:00

    Fetching GFS for 2025-04-14 00:00:00:  96%|█████████▌| 25/26 [00:36<00:01,  1.43s/it]    Running inference:  80%|████████  | 4/5 [03:47<00:53, 53.49s/it]
    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:39<00:00,  1.69s/it]    Fetching GFS for 2025-04-14 00:00:00: 100%|██████████| 26/26 [00:39<00:00,  1.50s/it]
    Running inference: 100%|██████████| 5/5 [04:11<00:00, 56.33s/it]    Running inference: 100%|██████████| 5/5 [04:11<00:00, 50.30s/it]
    2025-04-15 06:51:52.497 | SUCCESS  | earth2studio.run:deterministic:146 - Inference complete
    /
    ├── Z10hl (1, 5, 512, 640) float32
    ├── Z11hl (1, 5, 512, 640) float32
    ├── Z13hl (1, 5, 512, 640) float32
    ├── Z15hl (1, 5, 512, 640) float32
    ├── Z1hl (1, 5, 512, 640) float32
    ├── Z20hl (1, 5, 512, 640) float32
    ├── Z25hl (1, 5, 512, 640) float32
    ├── Z2hl (1, 5, 512, 640) float32
    ├── Z30hl (1, 5, 512, 640) float32
    ├── Z3hl (1, 5, 512, 640) float32
    ├── Z4hl (1, 5, 512, 640) float32
    ├── Z5hl (1, 5, 512, 640) float32
    ├── Z6hl (1, 5, 512, 640) float32
    ├── Z7hl (1, 5, 512, 640) float32
    ├── Z8hl (1, 5, 512, 640) float32
    ├── Z9hl (1, 5, 512, 640) float32
    ├── ilat (512,) int64
    ├── ilon (640,) int64
    ├── lat (512, 640) float32
    ├── lead_time (5,) int64
    ├── lon (512, 640) float32
    ├── mslp (1, 5, 512, 640) float32
    ├── p10hl (1, 5, 512, 640) float32
    ├── p11hl (1, 5, 512, 640) float32
    ├── p13hl (1, 5, 512, 640) float32
    ├── p15hl (1, 5, 512, 640) float32
    ├── p1hl (1, 5, 512, 640) float32
    ├── p20hl (1, 5, 512, 640) float32
    ├── p2hl (1, 5, 512, 640) float32
    ├── p3hl (1, 5, 512, 640) float32
    ├── p4hl (1, 5, 512, 640) float32
    ├── p5hl (1, 5, 512, 640) float32
    ├── p6hl (1, 5, 512, 640) float32
    ├── p7hl (1, 5, 512, 640) float32
    ├── p8hl (1, 5, 512, 640) float32
    ├── p9hl (1, 5, 512, 640) float32
    ├── q10hl (1, 5, 512, 640) float32
    ├── q11hl (1, 5, 512, 640) float32
    ├── q13hl (1, 5, 512, 640) float32
    ├── q15hl (1, 5, 512, 640) float32
    ├── q1hl (1, 5, 512, 640) float32
    ├── q20hl (1, 5, 512, 640) float32
    ├── q25hl (1, 5, 512, 640) float32
    ├── q2hl (1, 5, 512, 640) float32
    ├── q30hl (1, 5, 512, 640) float32
    ├── q3hl (1, 5, 512, 640) float32
    ├── q4hl (1, 5, 512, 640) float32
    ├── q5hl (1, 5, 512, 640) float32
    ├── q6hl (1, 5, 512, 640) float32
    ├── q7hl (1, 5, 512, 640) float32
    ├── q8hl (1, 5, 512, 640) float32
    ├── q9hl (1, 5, 512, 640) float32
    ├── refc (1, 5, 512, 640) float32
    ├── t10hl (1, 5, 512, 640) float32
    ├── t11hl (1, 5, 512, 640) float32
    ├── t13hl (1, 5, 512, 640) float32
    ├── t15hl (1, 5, 512, 640) float32
    ├── t1hl (1, 5, 512, 640) float32
    ├── t20hl (1, 5, 512, 640) float32
    ├── t25hl (1, 5, 512, 640) float32
    ├── t2hl (1, 5, 512, 640) float32
    ├── t2m (1, 5, 512, 640) float32
    ├── t30hl (1, 5, 512, 640) float32
    ├── t3hl (1, 5, 512, 640) float32
    ├── t4hl (1, 5, 512, 640) float32
    ├── t5hl (1, 5, 512, 640) float32
    ├── t6hl (1, 5, 512, 640) float32
    ├── t7hl (1, 5, 512, 640) float32
    ├── t8hl (1, 5, 512, 640) float32
    ├── t9hl (1, 5, 512, 640) float32
    ├── time (1,) int64
    ├── u10hl (1, 5, 512, 640) float32
    ├── u10m (1, 5, 512, 640) float32
    ├── u11hl (1, 5, 512, 640) float32
    ├── u13hl (1, 5, 512, 640) float32
    ├── u15hl (1, 5, 512, 640) float32
    ├── u1hl (1, 5, 512, 640) float32
    ├── u20hl (1, 5, 512, 640) float32
    ├── u25hl (1, 5, 512, 640) float32
    ├── u2hl (1, 5, 512, 640) float32
    ├── u30hl (1, 5, 512, 640) float32
    ├── u3hl (1, 5, 512, 640) float32
    ├── u4hl (1, 5, 512, 640) float32
    ├── u5hl (1, 5, 512, 640) float32
    ├── u6hl (1, 5, 512, 640) float32
    ├── u7hl (1, 5, 512, 640) float32
    ├── u8hl (1, 5, 512, 640) float32
    ├── u9hl (1, 5, 512, 640) float32
    ├── v10hl (1, 5, 512, 640) float32
    ├── v10m (1, 5, 512, 640) float32
    ├── v11hl (1, 5, 512, 640) float32
    ├── v13hl (1, 5, 512, 640) float32
    ├── v15hl (1, 5, 512, 640) float32
    ├── v1hl (1, 5, 512, 640) float32
    ├── v20hl (1, 5, 512, 640) float32
    ├── v25hl (1, 5, 512, 640) float32
    ├── v2hl (1, 5, 512, 640) float32
    ├── v30hl (1, 5, 512, 640) float32
    ├── v3hl (1, 5, 512, 640) float32
    ├── v4hl (1, 5, 512, 640) float32
    ├── v5hl (1, 5, 512, 640) float32
    ├── v6hl (1, 5, 512, 640) float32
    ├── v7hl (1, 5, 512, 640) float32
    ├── v8hl (1, 5, 512, 640) float32
    └── v9hl (1, 5, 512, 640) float32





.. GENERATED FROM PYTHON SOURCE LINES 111-118

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 4 hours into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 120-162

.. code-block:: Python

    import cartopy
    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = f"{date}"
    variable = "t2m"
    step = 4  # lead time = 1 hr

    plt.close("all")

    # Create a correct Lambert Conformal projection
    projection = ccrs.LambertConformal(
        central_longitude=262.5,
        central_latitude=38.5,
        standard_parallels=(38.5, 38.5),
        globe=ccrs.Globe(semimajor_axis=6371229, semiminor_axis=6371229),
    )

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set state lines
    ax.add_feature(
        cartopy.feature.STATES.with_scale("50m"), linewidth=0.5, edgecolor="black", zorder=2
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig(f"outputs/09_{date}_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_09_stormcast_example_001.png
   :alt: 2025-04-14 - Lead time: 4hrs
   :srcset: /examples/images/sphx_glr_09_stormcast_example_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (7 minutes 49.769 seconds)


.. _sphx_glr_download_examples_09_stormcast_example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 09_stormcast_example.ipynb <09_stormcast_example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 09_stormcast_example.py <09_stormcast_example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 09_stormcast_example.zip <09_stormcast_example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
